# glBasic

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
template/: main.cpp
